# MobileAkita

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: android.yml  ci.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/honoragent/app/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
docs/: ANDROID.md  API_DOCS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md
examples/javascript/: README.md  basic-task.ts
examples/python/: README.md  basic_task.py
src/honor_agent/: __init__.py  client.py  evolution.py  github_intelligence.py  models.py  orchestrator.py  server.py
src/honor_agent/static/: app.css  app.js  index.html
tests/: test_api.py  test_client.py  test_github_intelligence.py
